# FriendlyYoungZeroFTP

./: .gitignore  readme.md
.github/workflows/: submission.yaml
client/: .gitignore  CMakeLists.txt  headless.cpp  main_window.py  main_window.ui  mainwindow.cpp  mainwindow.h  requirements.txt
client/include/: mainwindow.h
client/src/: mainwindow.cpp  mainwindow.ui
client/test/: Makefile
doc/: report.md  template.latex  udpAnswer.md
server/: .gitignore  CMakeLists.txt  Makefile  autograde_server.py  autograde_server_mac.py
server/include/: filesystem.h  ftp.h  listener.h  logger.h  pasv_channel.h  port_channel.h  protocol.h
server/src/: filesystem.c  ftp.c  listener.c  logger.c  main.c  pasv_channel.c  port_channel.c  protocol.c
udp/c/: Makefile  client.c  server.c
